# pool_ticket_task

./: Dockerfile  Dockerfile.celery  README.md  alembic.ini  docker-compose.yml  pyproject.toml  template.env
app/: main.py
app/cache/: cache_response_decorator.py  remove_cache_key.py
app/celery/: tasks.py
app/core/: config.py  constant_variables.py
app/db/: base.py  crud_base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 156c6493994d_add_user_model.py  d55c89dbe17a_add_task_model.py
app/modules/auth/: main.py
app/modules/auth/dals/: user_dal.py
app/modules/auth/helpers/: add_user.py  authenticate_user.py  create_access_token.py  get_current_user.py  get_hash_password.py  verify_password.py
app/modules/auth/models/: user.py
app/modules/auth/routes/: create.py  login.py
app/modules/auth/schemas/: create.py  login.py
app/modules/task/: main.py
app/modules/task/dals/: task_dal.py
app/modules/task/helpers/: add_task.py  filter_tasks.py  get_task_by_id.py  refresh_task.py  remove_task.py
app/modules/task/models/: task.py
app/modules/task/routes/: create.py  delete.py  get.py  update.py
app/modules/task/schemas/: create.py  delete.py  get.py  task_status.py  update.py
